# QA-Agent

./: .gitignore  README.en.md  README.md  ios-search-bvl.steps.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.typecheck.json
runner/: pyproject.toml
runner/qa_agent_runner/: __init__.py  __main__.py  contract.py  ios.py  replay.py  server.py  web.py
skill/qa-agent/: SKILL.md
skill/qa-agent/agents/: openai.yaml
skill/qa-agent/references/: changelog.md  cli-command-reference.md  directory-structure.md  full-workflow.md  operating-model.md  python-regression.md  recommended-regression-stack.md  regression-runner.md  workflow.md
src/: act.ts  approval.ts  archive.ts  built-in-skills.ts  capabilities.ts  cli.ts  continue.ts  driver.ts  engine.ts  events.ts  finish.ts  host-adapters.ts  impact-analysis.ts  indexer.ts  managed-assets.ts  memory.ts  migration.ts  operations.ts  plan-draft.ts  planning.ts  platform.ts  playwright-adapter.ts  project.ts  prompts.ts  python-regression.ts  quick.ts  recommended-stack.ts  regression-steps.ts  regression.ts  release.ts  report-contract.ts  report.ts  runner-path.ts  safety.ts  scenario-regression.ts  schemas.ts  session.ts  source-verifier.ts  store.ts  task-finalizer.ts  (+7 more)
src/host-configurators/: agents.ts  claude.ts  codex.ts  copilot.ts  cursor.ts  gemini.ts  opencode.ts  registry.ts  shared.ts
tests/: ios-command-contract.test.ts  prompt-contract.test.ts  python-regression.test.ts  qa-agent.test.ts  recommended-stack.test.ts  session-auto-bind.test.ts  test_ios_driver.py
(+12 files in other folders)
