[project]
name = "qa-agent-runner"
version = "0.4.0"
description = "QA Agent built-in UI driver and regression replay executor"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
web = ["playwright>=1.40"]
ios = []  # uses system xcrun simctl + idb CLI

[project.scripts]
qa-agent-runner = "qa_agent_runner.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
